--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div class="OceanWave">
         Ocean Waves
     </div>
-    <div class="affectingFactor">
+    <div class="affectingfactor">
         affecting factors
+    </div>
+	<div class="swipeorpress">
+        Swipe or Press
     </div>
     <img class="arrow" src="./img/arrow.png" alt="arrow">
     <div class="top-text">
@@ -23,7 +26,8 @@
         affect the formation and change of ocean waves
     </div>
     <div class="WindSpeed">
-        Wind speed
+        <span>W</span><span>i</span><span>n</span><span>d</span> 
+		<span>S</span><span>p</span><span>e</span><span>e</span><span>d</span>
     </div>
     <div class="WindSpeed-text" style="display: none;">
         <span>
@@ -31,7 +35,8 @@
         </span>
     </div>
     <div class="WaterDepth">
-        Water depth
+        <span>W</span><span>a</span><span>t</span><span>e</span><span>r</span> 
+		<span>D</span><span>e</span><span>p</span><span>t</span><span>h</span>
     </div>
     <div class="WaterDepth-text" style="display: none;">
         <span>
@@ -39,7 +44,7 @@
         </span>
     </div>
     <div class="SeafloorTopography">
-        Seafloor topography
+		<span>S</span><span>e</span><span>a</span><span>f</span><span>l</span><span>o</span><span>r</span><span>T</span><span>o</span><span>p</span><span>o</span><span>g</span><span>r</span><span>a</span><span>p</span><span>h</span>
     </div>
     <div class="SeafloorTopography-text" style="display: none;">
         <span>
@@ -52,6 +57,157 @@
     <div class="bottom-text2">
         affect the formation and change of ocean waves
     </div>
+	
+	<div class="bubbles">
+			<span style="--i:26;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:24;">t</span>
+			<span style="--i:20;">e</span>
+			<span style="--i:20;">r</span>
+			<span style="--i:23;">w</span>
+			<span style="--i:18;">a</span>
+			<span style="--i:16;">t</span>
+			<span style="--i:19;">e</span>
+			<span style="--i:20;">r</span>
+			<span style="--i:22;">w</span>
+			<span style="--i:25;">a</span>
+			<span style="--i:18;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:15;">r</span>
+			<span style="--i:20;">w</span>
+			<span style="--i:26;">a</span>
+			<span style="--i:17;">t</span>
+			<span style="--i:20;">e</span>
+			<span style="--i:22;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:24;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:21;">r</span>
+			<span style="--i:20;">w</span>
+			<span style="--i:21;">a</span>
+			<span style="--i:24;">t</span>
+			<span style="--i:10;">e</span>
+			<span style="--i:28;">r</span>
+			<span style="--i:22;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:28;">e</span>
+			<span style="--i:22;">r</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:14;">a</span>
+			<span style="--i:21;">t</span>
+			<span style="--i:24;">e</span>
+			<span style="--i:10;">r</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:14;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:12;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:14;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:12;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:14;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:12;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:28;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:23;">t</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">w</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:12;">r</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:14;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+			<span style="--i:28;">a</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:12;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:21;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:22;">a</span>
+			<span style="--i:28;">t</span>
+			<span style="--i:22;">t</span>
+			<span style="--i:22;">e</span>
+			<span style="--i:24;">r</span>
+			<span style="--i:21;">w</span>
+			<span style="--i:28;">w</span>
+		</div>
+		
 </body>
 <script>
     const windSpeed = document.querySelector('.WindSpeed');
